# partcover.net4

./: .gitignore  BuildInstructions.txt  Credits.txt  PartCover.sln  PrepareBuildEnvironment.bat  README  build.bat  index.html  params.json
PartCover.Browser/: ApplicationHost.cs  MainEntry.cs  PartCover.Browser.csproj  PartCover.Coverage.Browser.snk
PartCover.Browser.Api/: DummyProgressTracker.cs  ICoverageReport.cs  ICoverageReportService.cs  IFeature.cs  IProgressTracker.cs  IReportItem.cs  IReportItemSelectionService.cs  IReportViewFactory.cs  IReportViewValve.cs  IRunHistory.cs  IService.cs  IServiceContainer.cs  ITreeItemSelectionHandler.cs  PartCover.Browser.Api.csproj  ReportView.cs
PartCover.Console/: ApplicationEntry.cs  AssemblyInfo.cs  PartCover.Console.csproj  app.config
PartCover.CorDriver/: CallGatherer.cpp  CallGatherer.h  CorProfiler.cpp  CorProfiler.h  CorProfilerAssemblies.cpp  CorProfilerOptions.cpp  CorProfilerOptions.h  CoverageGatherer.cpp  CoverageGatherer.h  DriverLog.cpp  DriverLog.h  Environment.cpp  Environment.h  FunctionMap.cpp  FunctionMap.h  ILhelpers.cpp  ILhelpers.h  InstrumentResults.cpp  InstrumentResults.h  Instrumentator.cpp  Instrumentator.h  InstrumentedILBody.cpp  InstrumentedILBody.h  MessageCenter.cpp  MessageCenter.h  PartCover.CorDriver.aps  PartCover.CorDriver.h  PartCover.CorDriver.idl  PartCover.CorDriver.rc  PartCover.CorDriver.tlb  PartCover.CorDriver.vcproj  PartCover.CorDriver_i.c  PartCoverConnector.cpp  PartCoverConnector.h  PartCoverModule.cpp  Rules.cpp  Rules.h  allocator.cpp  allocator.h  corhelper.cpp  (+37 more)
PartCover.Coverage.Browser/: AboutForm.cs  AboutForm.resx  AssemblyInfo.cs  BlockInfoControl.cs  (+9 more)
libraries/RCF-1.2/demo/cmake/: CMakeLists.txt
libraries/RCF-1.2/demo/cmake/DemoClient/: CMakeLists.txt
libraries/RCF-1.2/demo/cmake/DemoServer/: CMakeLists.txt
libraries/RCF-1.2/demo/cmake/RcfDll/: CMakeLists.txt
libraries/RCF-1.2/demo/cmake/RcfLib/: CMakeLists.txt
(+951 files in other folders)
