
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(RCF)

SET(RCF_ROOT ${CMAKE_SOURCE_DIR}/../.. )
SET(BOOST_ROOT C:/boost_1_33_1)
SET(BIN_PATH ${CMAKE_SOURCE_DIR}/bin)

SET(
    RCF_DEFINES
    -DWIN32_LEAN_AND_MEAN
    -DBOOST_ALL_NO_LIB )

SET(
    RCF_INCLUDES 
    ${BOOST_ROOT} 
    ${RCF_ROOT}/include)

ADD_SUBDIRECTORY(RcfLib)
ADD_SUBDIRECTORY(RcfDll)
ADD_SUBDIRECTORY(DemoClient)
ADD_SUBDIRECTORY(DemoServer)
