
ADD_DEFINITIONS( ${RCF_DEFINES} )

INCLUDE_DIRECTORIES( ${RCF_INCLUDES} )

SET(EXECUTABLE_OUTPUT_PATH ${BIN_PATH} )
SET(LIBRARY_OUTPUT_PATH ${BIN_PATH})
LINK_DIRECTORIES( ${BIN_PATH} )

ADD_EXECUTABLE(
    DemoServer
    ${RCF_ROOT}/demo/Server.cpp)

TARGET_LINK_LIBRARIES( DemoServer RcfLib )
